プリミティブラッパークラスのコンストラクタの代わりにvalueOfを呼ぶよう変更